--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
   <h1 class="h1 text-center max-w-853">О компании</h1>
   <div class="about-text onloadtext">Столярная мастерская «Kondoor» занимается изготовлением эксклюзивных изделий из
     дерева по индивидуальным проектам с 2004 года</div>
-  <button class="page-button mt-25 onloadanim" data-scroll="#mainForm">Заказать изделие</button>
+  <button class="page-button mt-25 onloadanim" data-modal="#callback">Заказать изделие</button>
 
   <picture>
     <source srcset="./assets/images/about/about-sm.jpg" media="(max-width:500px)">
@@ -179,5 +179,3 @@
     </li>
   </ul>
 </section>
-
-{{> callback}}
