--- a/src/contacts.html
+++ b/src/contacts.html
@@ -67,4 +67,4 @@
       width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 </div>
 
-{{> callback}}
+{{> order}}
