--- a/src/main.html
+++ b/src/main.html
@@ -73,7 +73,30 @@ title: Главная
   </section>
 
   <section class="values container dark">
-    <div class="tree">
+    <div>
+      <h2 class="h2" data-aos="fade-up">Ценность деревянных изделий из массива</h2>
+  
+      <ul class="values-list">
+        <li data-aos="fade-left">
+          <div class="img-contain"><img src="./assets/images/main/values/values-1.svg" alt="values"></div>
+          <p>Экологичность и натуральность</p>
+        </li>
+        <li data-aos="fade-left">
+          <div class="img-contain"><img src="./assets/images/main/values/values-2.svg" alt="values"></div>
+          <p>Возможность использования лаков на водной основе</p>
+        </li>
+        <li data-aos="fade-left">
+          <div class="img-contain"><img src="./assets/images/main/values/values-3.svg" alt="values"></div>
+          <p>Предварительная сборка простота монтажа</p>
+        </li>
+        <li data-aos="fade-left">
+          <div class="img-contain"><img src="./assets/images/main/values/values-4.svg" alt="values"></div>
+          <p>Повышенная звуко и теплоизоляция</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="tree mt-80">
       <div class="tree-top">
         <h2 class="tree-title" data-aos="fade-right">Мы работаем только <br>
           с экологически чистыми материалами</h2>
@@ -99,29 +122,6 @@ title: Главная
           В своих работах мы <strong>не используем ЛДСП</strong>
         </h4>
       </div>
-    </div>
-
-    <div class="mt-80">
-      <h2 class="h2" data-aos="fade-up">Ценность деревянных изделий из массива</h2>
-  
-      <ul class="values-list">
-        <li data-aos="fade-left">
-          <div class="img-contain"><img src="./assets/images/main/values/values-1.svg" alt="values"></div>
-          <p>Экологичность и натуральность</p>
-        </li>
-        <li data-aos="fade-left">
-          <div class="img-contain"><img src="./assets/images/main/values/values-2.svg" alt="values"></div>
-          <p>Возможность использования лаков на водной основе</p>
-        </li>
-        <li data-aos="fade-left">
-          <div class="img-contain"><img src="./assets/images/main/values/values-3.svg" alt="values"></div>
-          <p>Предварительная сборка простота монтажа</p>
-        </li>
-        <li data-aos="fade-left">
-          <div class="img-contain"><img src="./assets/images/main/values/values-4.svg" alt="values"></div>
-          <p>Повышенная звуко и теплоизоляция</p>
-        </li>
-      </ul>
     </div>
   </section>
 
