--- a/src/ourWorks.html
+++ b/src/ourWorks.html
@@ -8,6 +8,8 @@
     </svg>
   </div>
 
+  <button class="page-button mt-60 onloadanim" data-modal="#callback">Заказать изделие</button>
+
   <picture>
     <source srcset="./assets/images/ourWorks/ourWorks-sm.jpg" media="(max-width:500px)">
     <img class="back-cover" src="./assets/images/ourWorks/ourWorks.jpg" alt="main">
